Added styling to front page

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,10 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>CS290 Final</title>
-    <!--
-      This 3rd-party stylesheet makes available the font families to be used
-      for this page ("Roboto" and "Roboto Slab").
-    -->
+    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Geo:ital@0;1&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@100&family=Roboto:wght@300;400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/style.css">
 
