--- a/views/mainPage.handlebars
+++ b/views/mainPage.handlebars
@@ -1,4 +1,6 @@
-<canvas>
-  <button>Start</button>
-  <button>Leaderboard</button>>
-</canvas>
+<div class="canvas">
+  <div class="start-menu">
+    <button type="button" id="start-button">Start</button>
+    <button type="button" id="leaderboiard-button">Leaderboard</button>
+  </div>
+</div>
