--- a/static/style.css
+++ b/static/style.css
@@ -1,30 +1,48 @@
-body {
+:root {
+  /* CSS HEX */
+  /* --cyan: rgb(0, 255, 255) */
+  --dark: rgb(29, 23, 52);
+  --blue: rgb(43, 31, 117);
+  --purple: rgb(102, 60, 192);
+  --yellow: rgb(242, 163, 9);
+  --orange: rgb(255, 75, 18);
+  --maroon: rgb(217, 22, 86);
+}
+
+html, body {
+  display: flex;
+  flex-direction: column;
+  height:100%;
+
   font-family: 'Roboto', sans-serif;
   margin: 0;
+
+  background-color: var(--dark);
 }
 
 a {
   text-decoration: none;
-  color: #f67811;
-}
-
-a:hover {
-  text-decoration: underline;
 }
 
 header {
-  background-color: #000;
+  background-color: var(--blue);
   display: flex;
   align-items: center;
-  position: relative;
+  flex-shrink: 1;
 }
 
 header a {
   color: #fff;
 }
 
+.header-image-container {
+  max-height: 150px;
+  max-width: 150px;
+}
+
 .header-image-container img {
-  max-height: 100px;
+  max-height: 150px;
+  max-width: 150px;
 }
 
 .site-title {
@@ -33,6 +51,47 @@ header a {
   margin: 0 0 0 20px;
 }
 
-.site-title a:hover {
-  text-decoration: none;
+.start-menu {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  width: 45rem;
+  height: 30rem;
+
+  border: 2px solid white;
+  border-radius: 10px;
+  background-color: var(--blue);
+}
+
+.start-menu button {
+  font-family: "Geo", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 4em;
+  color: white;
+  background-color: var(--purple);
+
+  width: 30rem;
+  height: 6rem;
+  margin: 2rem 0;
+
+  border: none;
+}
+
+.start-menu button:hover {
+  scale: 1.05;
+}
+
+.start-menu button:active {
+  background-color: rgba(102, 60, 192, 0.75);
+}
+
+.canvas {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+  align-items: center;
 }
