--- a/views/mainPage.handlebars
+++ b/views/mainPage.handlebars
@@ -1,6 +1,6 @@
 <div class="canvas">
   <div class="start-menu">
-    <button type="button" id="start-button">Start</button>
-    <button type="button" id="leaderboiard-button">Leaderboard</button>
+    <button type="button" id="start-button"><a href="./play">Start</a></button>
+    <button type="button" id="leaderboiard-button"><a href="./leaderboard">Leaderboard</a></button>
   </div>
 </div>
