--- a/views/game.handlebars
+++ b/views/game.handlebars
@@ -1,1 +1,11 @@
-<div class="canvas"></div>
+
+<canvas id="canvas1"></canvas>
+
+<button type="button" id="score-display" class="score-display">Score: 0</button>
+
+
+  <section id ="color-display" class="color-display" style="background-color: {{colorID}}">
+      <p class="text">Color: {{colorText}}</p>
+  </section>
+
+<script src="/game.js" charset="utf-8"></script>
