--- a/views/mainPage.handlebars
+++ b/views/mainPage.handlebars
@@ -1,6 +1,6 @@
-<div class="canvas">
+<div id="canvas1">
   <div class="start-menu">
     <button type="button" id="start-button"><a href="./play">Start</a></button>
-    <button type="button" id="leaderboiard-button"><a href="./leaderboard">Leaderboard</a></button>
+    <button type="button" id="leaderboard-button"><a href="./leaderboard">Leaderboard</a></button>
   </div>
 </div>
