--- a/views/game.handlebars
+++ b/views/game.handlebars
@@ -1,4 +1,5 @@
 
+<canvas id="collision1"></canvas>
 <canvas id="canvas1"></canvas>
 
 <button type="button" id="score-display" class="score-display">Score: 0</button>
