--- a/views/mainPage.handlebars
+++ b/views/mainPage.handlebars
@@ -1,4 +1,4 @@
-<div id="canvas1">
+<div>
   <div class="start-menu">
     <button type="button" id="start-button"><a href="./play">Start</a></button>
     <button type="button" id="leaderboard-button"><a href="./leaderboard">Leaderboard</a></button>
