--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -1,10 +1,10 @@
 <header>
 
   <div class="header-image-container">
-    <img src="/test.png" alt="Test Logo">
+    <img src="/logo.png" alt="Logo">
   </div>
 
-  <h1 class="site-title"><a href="#">Final</a></h1>
+  <h1 class="site-title"><a href="#">Shooty McGee</a></h1>
 
 </header>
 
