--- a/static/style.css
+++ b/static/style.css
@@ -11,21 +11,30 @@
 html, body {
   display: flex;
   flex-direction: column;
-  height:100%;
+  height: 100%;
 
   font-family: 'Geo', sans-serif;
   margin: 0;
 
-  background-color: var(--dark);
+  /* background-color: var(--dark); */
+  /* background-image: "cave.png"; */
 }
 
-canvas {
+body {
+  cursor: url("crosshair.cur") 15 15, crosshair;
+}
+
+#canvas1 {
   /* background-color: var(--purple); */
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
+  background-image: url("cavePurple.png");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: 100% 100%;
 }
 
 #collision1 {
@@ -139,13 +148,12 @@ header a {
 
 }
 
-.score-display:hover{
+/* .score-display:hover{
   scale: 1.05;
-}
+} */
 
 .score-display:active{
   background-color: var(--blue)
-
 }
 
 /*Color display: implemented by Chloe*/
@@ -185,7 +193,7 @@ header a {
 
 /*cursor display: implemented by Chloe (Doesn't seem to work yet)*/
 
-.container{
+.container {
   height: 100vh;
   display: flex;
   justify-content: center;
@@ -195,3 +203,14 @@ header a {
 }
 
 /*Scoreboard/Leaderboard display: implemented by Chloe*/
+
+
+
+/* Game Over Screen */
+#game-over {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
