--- a/static/style.css
+++ b/static/style.css
@@ -35,7 +35,9 @@ body {
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: 100% 100%;
+  color: white;
 }
+
 
 #collision1 {
   opacity: 0;
@@ -53,7 +55,7 @@ header {
 }
 
 header a {
-  color: #fff;
+  color: white;
 }
 
 .header-image-container {
@@ -100,7 +102,7 @@ header a {
   border: none;
 
   * {
-    color: #fff;
+    color: white;
   }
 }
 
@@ -118,6 +120,10 @@ header a {
   width: 100%;
   height: 100%;
   align-items: center;
+}
+
+#Leaderboard {
+  font-size: 30px;
 }
 
 /*Section for the game page*/
@@ -143,9 +149,7 @@ header a {
 
   position: fixed; /* Position the element fixed relative to the viewport */
   bottom: 0;   
-  left: 0rem;        
-
-
+  left: 0rem;
 }
 
 /* .score-display:hover{
@@ -208,9 +212,50 @@ header a {
 
 /* Game Over Screen */
 #game-over {
+  display: none;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   position: absolute;
   width: 100%;
   height: 100%;
+  background-color: rgb(0, 0, 0, 0.75);
+}
+
+.game-over-menu {
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  width: 45rem;
+  height: 30rem;
+
+  /* border: 2px solid white; */
+  border-radius: 10px;
 }
+
+.game-over-menu button {
+  font-family: "Geo", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 4em;
+  background-color: var(--purple);
+
+  width: 30rem;
+  height: 6rem;
+  margin: 2rem 0;
+
+  border: none;
+
+  color: white;
+}
+
+#play-again:hover {
+  scale: 1.05;
+}
+
+#play-again:active {
+  background-color: rgba(102, 60, 192, 0.75);
+}
+
