--- a/views/game.handlebars
+++ b/views/game.handlebars
@@ -8,8 +8,10 @@
 <section id ="color-display" class="color-display" style="background-color: {{colorID}}">
     <p class="text">Color: {{colorText}}</p>
 </section>
-<div class="hidden" id="game-over">
-  <div type="button">Game Over</div>
-  <button>Play Again</button>
+<div id="game-over">
+  <div class="game-over-menu">
+    <button>Game Over</button>
+    <button type="button" id="play-again">Play Again</button>
+  </div>
 </div>
 <script src="/game.js" charset="utf-8"></script>
