Added end game, reset stat, counters

--- a/views/mainPage.handlebars
+++ b/views/mainPage.handlebars
@@ -1,5 +1,5 @@
-<div id="canvas1">
-  <div class="start-menu">
+<div class="start-menu">
+  <div class="start-menu-container">
     <button type="button" id="start-button"><a href="./play">Start</a></button>
     <button type="button" id="leaderboard-button"><a href="./leaderboard">Leaderboard</a></button>
   </div>
