Removed unnecessary files

--- a/views/partials/header.handlebars
+++ b/views/partials/header.handlebars
@@ -1,7 +1,7 @@
 <header>
 
   <div class="header-image-container">
-    <img src="/logo.png" alt="Logo">
+    <img src="/Cowboy.png" alt="Logo">
   </div>
 
   <h1 class="site-title"><a href="#">Shooty McGee</a></h1>
